@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-19T08:19:08Z",
-  "count_outdated" : 399,
-  "uniques_outdated" : 230,
-  "count" : 425,
+  "timestamp" : "2022-07-19T16:22:13Z",
+  "count_outdated" : 401,
+  "uniques_outdated" : 231,
+  "count" : 426,
   "uniques" : 245,
   "clones" : [
-    {
-      "timestamp": "2022-07-05T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-06T00:00:00Z",
       "count": 3,
